# hello-waga

./: README.md
hello-waga/: package-lock.json  package.json
hello-waga-wubu-waga-v1/hello-waga/: package-lock.json  package.json
hello-waga-wubu-waga-v1/hello-waga/app/: layout.tsx
hello-waga/app/: globals.css  page.tsx
hello-waga/types/: Product.ts
waga_api/: .coveragerc  .dockerignore  LICENSE  README.md  compose.yaml  pyproject.toml  pytest.ini
waga_api/apps/account/: admin.py  enums.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
waga_api/apps/account/fixtures/: role.json
waga_api/apps/account/migrations/: 0001_initial.py
waga_api/apps/account/tests/: conftest.py  test_managers.py
waga_api/apps/core/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
waga_api/apps/core/fixtures/: lookup.json
waga_api/apps/core/migrations/: 0001_initial.py
waga_api/apps/price/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
waga_api/apps/price/fixtures/: product_categories.json  product_category_attributes.json
waga_api/apps/price/migrations/: 0001_initial.py  0002_productcategory_value_alter_productcategory_name_and_more.py  0003_alter_productcategoryattribute_field_name_and_more.py  0004_remove_product_is_for_sale_remove_product_price_and_more.py
waga_api/config/: asgi.py  policies.json  urls.py  wsgi.py
waga_api/config/settings/: base.py  dev.py  test.py
waga_api/docker/dev/: Dockerfile
waga_api/docs/: db_design.md
(+22 files in other folders)
